--- a/SAFE_PARKING_FRONT/src/app/components/reportes/cant-incidentes-por-rol/cant-incidentes-por-rol.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/reportes/cant-incidentes-por-rol/cant-incidentes-por-rol.component.html
@@ -6,11 +6,17 @@
     <title>Document</title>
   </head>
   <body>
-    <app-navbar-administrador></app-navbar-administrador>
+     <!-- Para ocultar barra en responsive -->
+     <button (click)="toggleNavbar()" class="toggle-button">
+      <i class="fa fa-bars"></i>
+    </button>
+    <!-- Fin de ocultar barra en responsive -->
+
+    <app-navbar-administrador [hidden]="!mostrarNavbar"></app-navbar-administrador>
 
     <div class="litle">
       <h2 style="text-align: center">
-        LISTA DE CANTIDAD DE INCIDENTES POR ROL
+        N° DE INCIDENTES POR TIPO DE USUARIO
       </h2>
     </div>
     <div class="container">
