--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
@@ -115,9 +115,9 @@
           </mat-form-field>
         </div>
         <div class="secciones">
-          <h2>IMAGEN</h2>
+          <h2></h2>
 
-          <mat-form-field class="example-full-width">
+          <mat-form-field class="example-full-width" *ngIf="mostrarCampo">
             <mat-label>Foto</mat-label>
             <input matInput placeholder="foto" formControlName="foto" />
             <mat-error *ngIf="obtenerControlCampo('foto')?.errors?.['required']">
