--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-admin-estacionamiento/listar-admin-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-admin-estacionamiento/listar-admin-estacionamiento.component.html
@@ -32,7 +32,7 @@
                 The actual rendered columns are set as a property on the row definition" -->
 
       <!-- Position Column -->
-      <ng-container matColumnDef="idEstacionamiento" sticky>
+      <ng-container matColumnDef="idEstacionamiento">
         <th mat-header-cell *matHeaderCellDef>Codigo</th>
         <td mat-cell *matCellDef="let element">
           {{ element.idEstacionamiento }}
@@ -97,7 +97,7 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="accion01" stickyEnd>
+      <ng-container matColumnDef="accion01">
         <th mat-header-cell *matHeaderCellDef>Editar</th>
         <td mat-cell *matCellDef="let element">
           <button class="botoncito1" *ngIf="role === 'administrador'" mat-raised-button
@@ -106,7 +106,7 @@
           </button>
         </td>
       </ng-container>
-      <ng-container matColumnDef="accion02" stickyEnd>
+      <ng-container matColumnDef="accion02">
         <th mat-header-cell *matHeaderCellDef>Eliminar</th>
         <td mat-cell *matCellDef="let element">
           <button class="botoncito2" *ngIf="role === 'administrador'" mat-raised-button
