--- a/SAFE_PARKING_FRONT/src/app/components/reportes/cant-precio-total-por-mes/cant-precio-total-por-mes.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/reportes/cant-precio-total-por-mes/cant-precio-total-por-mes.component.html
@@ -6,10 +6,15 @@
     <title>Document</title>
   </head>
   <body>
-    <app-navbar-administrador></app-navbar-administrador>
+      <!-- Para ocultar barra en responsive -->
+      <button (click)="toggleNavbar()" class="toggle-button">
+        <i class="fa fa-bars"></i>
+      </button>
+      <!-- Fin de ocultar barra en responsive -->
+    <app-navbar-administrador [hidden]="!mostrarNavbar"></app-navbar-administrador>
 
     <div class="litle">
-      <h2 style="text-align: center">LISTA DE PRECIO POR MES</h2>
+      <h2 style="text-align: center">INGRESOS TOTALES POR MES</h2>
     </div>
     <div class="container">
       <canvas
