--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/buscar-reserva-estacionamiento/buscar-reserva-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/buscar-reserva-estacionamiento/buscar-reserva-estacionamiento.component.css
@@ -5,19 +5,23 @@
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 50%;
-    margin:  auto; /* Centrar horizontalmente */
+    width: 80%;
+    margin: auto;
+    /* Centrar horizontalmente */
     flex-direction: column;
-    justify-content: center; /* Centrar verticalmente */
-    align-items: center; /* Centrar horizontalmente */
-  }
-
-body{
-  background: linear-gradient(to right, #11998e, #38ef7d);
-  padding: 30px;
-  margin-left: 250px;
-  height: auto;
+    justify-content: center;
+    /* Centrar verticalmente */
+    align-items: center;
+    /* Centrar horizontalmente */
 }
+
+body {
+    background: linear-gradient(to right, #11998e, #38ef7d);
+    padding: 30px;
+    margin-left: 250px;
+    height: auto;
+}
+
 .generic-group label {
     font-weight: bold;
     margin-bottom: 5px;
@@ -49,8 +53,9 @@ body{
     border-radius: 5px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    width: 50%;
-    margin: 0 auto; /* Centrar horizontalmente */
+    width: 80%;
+    margin: 0 auto;
+    /* Centrar horizontalmente */
 }
 
 /* Estilos para los contenedores de información genérica */
@@ -80,119 +85,119 @@ body{
 .toggle-button {
     display: none;
     /* Oculta el botón por defecto */
-  }
-  
-  /* Media query para pantallas más pequeñas */
-  @media only screen and (max-width: 768px) {
-  
+}
+
+/* Media query para pantallas más pequeñas */
+@media only screen and (max-width: 768px) {
+
     /* Estilos del botón para pantallas pequeñas */
     .toggle-button {
-      display: block;
-      /* Muestra el botón solo en pantallas pequeñas */
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      background-color: transparent;
-      border: none;
-      font-size: 24px;
-      color: #333;
-      /* Color del icono */
-      cursor: pointer;
-      outline: none;
-      z-index: 999;
-      /* Ajusta el z-index según sea necesario */
+        display: block;
+        /* Muestra el botón solo en pantallas pequeñas */
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        background-color: transparent;
+        border: none;
+        font-size: 24px;
+        color: #333;
+        /* Color del icono */
+        cursor: pointer;
+        outline: none;
+        z-index: 999;
+        /* Ajusta el z-index según sea necesario */
     }
-  
+
     body {
-      margin-left: 0;
-      transition: margin-left 0.3s ease;
-      /* Agrega una transición para suavizar el cambio */
+        margin-left: 0;
+        transition: margin-left 0.3s ease;
+        /* Agrega una transición para suavizar el cambio */
     }
-  
+
     /*Nav admin*/
     app-navbar-administrador[hidden] {
-      display: none;
-  
+        display: none;
+
     }
-  
+
     app-navbar-administrador {
-      transition: transform 0.3s ease;
-      /* Agrega una transición */
+        transition: transform 0.3s ease;
+        /* Agrega una transición */
     }
-  
+
     app-navbar-administrador[hidden] {
-      transform: translateX(-100%);
-      /* Mueve la barra fuera del viewport */
+        transform: translateX(-100%);
+        /* Mueve la barra fuera del viewport */
     }
-  
+
     app-navbar-administrador:not([hidden]) {
-      transform: translateX(0);
-      /* Restablece la posición */
+        transform: translateX(0);
+        /* Restablece la posición */
     }
-  
+
     /*Nav conductor*/
     app-navbar-conductor[hidden] {
-      display: none;
-  
+        display: none;
+
     }
-  
+
     app-navbar-conductor {
-      transition: transform 0.3s ease;
+        transition: transform 0.3s ease;
     }
-  
+
     app-navbar-conductor[hidden] {
-      transform: translateX(-100%);
+        transform: translateX(-100%);
     }
-  
+
     app-navbar-conductor:not([hidden]) {
-      transform: translateX(0);
+        transform: translateX(0);
     }
-  
+
     /*Nav arrendador*/
     app-navbar-arrendador[hidden] {
-      display: none;
-  
+        display: none;
+
     }
-  
+
     app-navbar-arrendador {
-      transition: transform 0.3s ease;
+        transition: transform 0.3s ease;
     }
-  
+
     app-navbar-arrendador[hidden] {
-      transform: translateX(-100%);
+        transform: translateX(-100%);
     }
-  
+
     app-navbar-arrendador:not([hidden]) {
-      transform: translateX(0);
+        transform: translateX(0);
     }
-  }
-  
-  @media only screen and (min-width: 768px) {
-  
+}
+
+@media only screen and (min-width: 768px) {
+
     /*Nav admin*/
     app-navbar-administrador[hidden] {
-      display: contents;
+        display: contents;
     }
-  
+
     app-navbar-administrador:not([hidden]) {
-      transform: translateX(0);
+        transform: translateX(0);
     }
-  
+
     /*Nav conductor*/
     app-navbar-conductor[hidden] {
-      display: contents;
+        display: contents;
     }
-  
+
     app-navbar-conductor:not([hidden]) {
-      transform: translateX(0);
+        transform: translateX(0);
     }
-  
+
     /*Nav arrendador*/
     app-navbar-arrendador[hidden] {
-      display: contents;
+        display: contents;
     }
-  
+
     app-navbar-arrendador:not([hidden]) {
-      transform: translateX(0);
+        transform: translateX(0);
     }
-  }
+}
