--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/listar-admin-usuario/listar-admin-usuario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/listar-admin-usuario/listar-admin-usuario.component.html
@@ -23,7 +23,7 @@
               The actual rendered columns are set as a property on the row definition" -->
 
       <!-- Position Column -->
-      <ng-container matColumnDef="codigo" sticky>
+      <ng-container matColumnDef="codigo">
         <th mat-header-cell *matHeaderCellDef>Codigo</th>
         <td mat-cell *matCellDef="let element">
           {{ element.idUsuario }}
@@ -109,7 +109,7 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="modificar" stickyEnd>
+      <ng-container matColumnDef="modificar">
         <th mat-header-cell *matHeaderCellDef>Editar</th>
         <td mat-cell *matCellDef="let element">
           <button class="botoncito1" mat-raised-button [routerLink]="['ediciones', element.idUsuario]">
@@ -117,7 +117,7 @@
           </button>
         </td>
       </ng-container>
-      <ng-container matColumnDef="eliminar" stickyEnd>
+      <ng-container matColumnDef="eliminar">
         <th mat-header-cell *matHeaderCellDef>Eliminar</th>
         <td mat-cell *matCellDef="let element">
           <button mat-raised-button class="botoncito2" (click)="eliminar(element.idUsuario)">
