--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
@@ -31,7 +31,7 @@
 
       <!-- idVehiculo Column -->
 
-      <ng-container matColumnDef="codigo" sticky>
+      <ng-container matColumnDef="codigo">
         <th mat-header-cell *matHeaderCellDef>Codigo</th>
         <td mat-cell *matCellDef="let element">{{ element.idVehiculo }}</td>
       </ng-container>
@@ -76,7 +76,7 @@
           {{ element.tarjetaPropiedadVehiculo }}
         </td>
       </ng-container>
-      <ng-container matColumnDef="accion01" stickyEnd>
+      <ng-container matColumnDef="accion01" >
         <th mat-header-cell *matHeaderCellDef>Editar</th>
         <td mat-cell *matCellDef="let element">
           <button mat-raised-button *ngIf="role === 'administrador'" class="botoncito1"
@@ -85,7 +85,7 @@
           </button>
         </td>
       </ng-container>
-      <ng-container matColumnDef="accion02" stickyEnd>
+      <ng-container matColumnDef="accion02" >
         <th mat-header-cell *matHeaderCellDef>Eliminar</th>
         <td mat-cell *matCellDef="let element">
           <button *ngIf="role === 'administrador'" mat-raised-button class="botoncito2"
