--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.css
@@ -11,7 +11,6 @@ body {
   color: #333;
   margin-left: 250px;
   height: 1500px;
-
 }
 
 /* Contenedor principal */
@@ -35,12 +34,12 @@ h2 {
 
 /* Mapa */
 .map-container {
-  width: 97.5%;
+  width: 100%;
   height: 100%;
   flex-direction: column;
   justify-content: center; /* Centrar verticalmente */
   align-items: center; /* Centrar horizontalmente */
-  margin-left: 45px;
+  z-index: 0;
 }
 
 .mostrar-mapa-button {
@@ -56,7 +55,7 @@ h2 {
   background: rgb(34, 34, 34) !important;
   color: white;
   position: fixed;
-  left: 53%;
+  left: 50%;
   bottom: 20px;
   z-index: 1000; /* Ajusta el valor según sea necesario para que esté por encima del mapa */
 }
