--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.css
@@ -14,10 +14,9 @@ body {
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin:  auto;
+  margin-top: 100px;
+  /* Centra horizontalmente */
 }
 
 
@@ -27,7 +26,7 @@ h1 {
 
 /* Estilos para los campos de formulario */
 mat-form-field {
-  width: 500px;
+  width: 100%;
   margin-bottom: 15px;
 }
 
