--- a/SAFE_PARKING_FRONT/src/app/components/horario/listar-usuario-horario/listar-usuario-horario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/listar-usuario-horario/listar-usuario-horario.component.css
@@ -3,7 +3,7 @@
     border-collapse: collapse;
     width: 80%;
     margin: 0 auto;
-    background: linear-gradient(135deg, #b8b9b9, #81b6a2);
+    background: white;
     margin-bottom: 10px;
     margin-top: 10px;
 
@@ -20,23 +20,23 @@
 
   .calendar th,
   .calendar td {
-    border: 1px solid #000000;
+    border: 1px solid #808080;
     padding: 10px;
     text-align: center;
 
   }
 
   .calendar th {
-    background-color: #888181;
+    background-color: #11998e;
     color: aliceblue;
   }
 
   /* Style for schedule information */
   .horario-item {
-    border: 1px solid #000000;
+    border: 1px solid #828282;
     padding: 15px;
     margin: 10px;
-    background-color: #40f1d4;
+    background: linear-gradient(to right, #11998e, #38ef7d);
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
