--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
@@ -47,7 +47,7 @@
               }}
             </mat-error>
           </mat-form-field>
-          <mat-form-field appearance="fill" class="example-full-width">
+          <mat-form-field appearance="fill" class="example-full-width"*ngIf="mostrarCampo">
             <mat-label>Fecha de registro</mat-label>
             <input matInput placeholder="Ingrese fecha de Registro" [matDatepicker]="picker"
               formControlName="fechaRegistro" readonly="true" />
@@ -115,7 +115,7 @@
           </mat-form-field>
         </div>
         <div class="secciones">
-          <h2></h2>
+          <h2>FOTO</h2>
 
           <mat-form-field class="example-full-width" *ngIf="mostrarCampo">
             <mat-label>Foto</mat-label>
