--- a/SAFE_PARKING_FRONT/src/app/components/navbar-arrendador/navbar-arrendador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-arrendador/navbar-arrendador.component.html
@@ -52,7 +52,7 @@
           </li>
           <li>
             <a href="components/localizaciones/listar_admin_localizaciones"
-              >Listar localizaciones (admin)</a
+              >Lista tus localizaciones</a
             >
           </li>
           <li>
@@ -94,12 +94,12 @@
         <ul class="sub-menu">
           <li>
             <a href="components/horarios/registrar_horarios"
-              >Registrar horarios</a
+              >Registra un horario</a
             >
           </li>
           <li>
             <a href="components/horarios/listar_usuario_horarios"
-              >Listar horarios (user)</a
+              >Calendario</a
             >
           </li>
         </ul>
@@ -114,21 +114,22 @@
           <li>
             <a
               href="components/horarios_estacionamiento/registrar_horarios_estacionamiento"
-              >Registrar hrs.Estacionamiento</a
-            >
-          </li>
-          <li>
-            <a
-              href="components/horarios_estacionamiento/buscar_horarios_estacionamiento"
-              >Buscar hrs.Estacionamiento</a
+              >Agrega un horario a tu estacionamiento </a
             >
           </li>
           <li>
             <a
               href="components/horarios_estacionamiento/listar_admin_horarios_estacionamiento"
-              >Listar hrs.Estacionamiento (admin)</a
+              >Ver horarios por estacionamiento</a
             >
           </li>
+          <li>
+            <a
+              href="components/horarios_estacionamiento/buscar_horarios_estacionamiento"
+              >Busca horarios de tus estacionamientos</a
+            >
+          </li>
+
         </ul>
 
         <input type="checkbox" class="menu-toggle" />
